# lora-modem

./: .editorconfig  .gitignore  .gitmodules  LICENSE  Makefile  README.md
cfg/: STM32L072CZEx_FLASH.ld  mlm32l0xx_hw_conf.h  stm32l0xx_hal_conf.h
lib/CMWX1ZZABZ-0xx/: Release_Notes.html  mlm32l07x01.c
lib/LoRaWAN/Crypto/: soft-se.c
lib/LoRaWAN/Mac/: LoRaMac.c  LoRaMac.h  LoRaMacClassB.c  LoRaMacClassB.h  LoRaMacCommands.c  LoRaMacCommands.h  LoRaMacTypes.h
lib/LoRaWAN/Mac/region/: Region.h  RegionAS923.c  RegionAU915.c  RegionCN470.c  RegionCN779.c  RegionCommon.c  RegionEU433.c  RegionEU868.c  RegionIN865.c  RegionKR920.c  RegionRU864.c  RegionUS915.c
lib/LoRaWAN/Patterns/Basic/: lora-test.c  lora.c
lib/LoRaWAN/Utilities/: lora_mac_version.h  systime.c  timeServer.c  trace.c  util_console.h  utilities.c  utilities.h
lib/rtt/: segger_rtt.c  segger_rtt.h  segger_rtt_conf.h
lib/stm/STM32L0xx_HAL_Driver/: Release_Notes.html
lib/sx1276/: Release_Notes.html  sx1276.c  sx1276.h
lib/tiny/: tiny_sscanf.c
python/: .gitignore  LICENSE  MANIFEST.in  README.md  lora.py  pyproject.toml  setup.cfg
src/: Commissioning.h  adc.c  adc.h  at.c  at.h  atci.c  atci.h  board.c  board.h  cbuf.c  cbuf.h  cmd.c  cmd.h  command.c  command.h  common.h  config.c  config.h  console.c  console.h  debug.c  debug.h  delay.h  eeprom.c  eeprom.h  error.c  error.h  fifo.c  fifo.h  gpio.c  gpio.h  halt.c  halt.h  hw.h  hw_conf.h  hw_gpio.c  hw_gpio.h  hw_msp.h  hw_rtc.c  hw_rtc.h  (+48 more)
src/debug/: log.c  log.h  usart.c  usart.h
tools/: lora.py  release.sh  test.py
tools/jlink/: flash copy.jlink  flash.jlink
tools/ozone/: ozone.jdebug
