[metadata]
name = lora-modem-abz
version = file: VERSION
description = Python library for the Murata TypeABZ LoRaWAN modem
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hardwario/lora-modem-abz
author = Jan Janak
author_email = jan@janakj.org
license = BSD 3-Clause License
license_files = [ LICENSE ]

[options]
install_requires =
    click
    pymitter
    pyserial
    tabulate

[options.entry_points]
console_scripts =
    lora = lora:cli
