[metadata]
name = lora-modem-abz
version = file: VERSION
description = Python library for the Murata TypeABZ LoRaWAN modem
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hardwario/lora-modem-abz
author = Jan Janak
author_email = jan@janakj.org
py_modules = lora.py
license = BSD 3-Clause License
keywords = iot, lora, lorawan, lpwan, lorawan-device, firmware, stm32
classifiers =
    Programming Language :: Python :: 3
    Environment :: Console
    License :: OSI Approved :: BSD License
    Topic :: Communications
    Topic :: Software Development :: Embedded Systems
    Topic :: System :: Networking
    Topic :: Utilities

[options]
install_requires =
    click
    pymitter
    pyserial
    tabulate
    python-dateutil

[options.entry_points]
console_scripts =
    lora = lora:cli
